# haskell-redux-app

./: .gitignore  README.md  haskell-redux-app.cabal  haskell-web-template.cabal  stack.yaml
app/: Main.hs
frontEndSrc/: index.html  index.js  package.json  webpack.config.js
frontEndSrc/actions/: route.js  user.js
frontEndSrc/components/: app.js  home.js  landing.js  login.js  main.js  navigation.js
frontEndSrc/middleware/: http.js
frontEndSrc/reducers/: user.js
frontEndSrc/stylesheets/: custom.scss  theme.config  theme.less
lib/: GeneralTypes.hs  UserTypes.hs
test/: Spec.hs
