name:                haskell-redux-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kgwinnup/haskell-redux-app
license:             BSD2
license-file:        LICENSE
author:              Kyle Gwinnup
maintainer:          kpgwinnup@gmail.com
copyright:           2017 Kyle Gwinnup
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     UserTypes
  build-depends:       base
                     , aeson
                     , text
  default-language:    Haskell2010

executable haskell-redux-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-redux-app
                     , signed-cookies
                     , http-types
                     , scotty
                     , cookie
                     , text
                     , bytestring
                     , wai-middleware-static
                     , wai-extra
                     , wai
                     , aeson
  default-language:    Haskell2010

test-suite haskell-redux-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kgwinnup/haskell-redux-app
